--- a/src/App.css
+++ b/src/App.css
@@ -10,14 +10,25 @@
    font-size: 3.2rem;
  }
 
+ h2 {
+  font-size: 2.6rem;
+}
+
  h3 {
    font-size: 2.4rem;
  }
+
+ h4 {
+  font-size: 2.1rem;
+}
 
  p {
    font-size: 2rem;
  }
 
+ h1,h2,h3,h4 {
+   margin: 1rem 0rem;
+ }
  @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 body {
