add: download cv

--- a/src/components/AboutMe.css
+++ b/src/components/AboutMe.css
@@ -20,7 +20,7 @@
     margin: 10px 0px;
 }
 
-.AboutMe a:hover {
+#icon a:hover {
     font-size: 2.2rem;
     font-weight: 600;
     color: #8000FF;
@@ -40,5 +40,38 @@
     width: 36px;
     height: 36px;
     margin-right: 1rem;
+}
+
+#download-button {
+    background-color: #ECDAFF;
+    color: #8000FF;
+    border: none;
+    padding: 1rem;
+    font-size: 1.8rem;
+    margin-top: 1rem;
+    border-radius: 10px 10px 0px 0px;
+
+    position: relative;
+    text-decoration: none;
+    color: #8000ff;
+}
+
+#download-button a {
+    color: #8000FF;
+}
+
+#download-button a:after {
+    content: "";
+    position: absolute;
+    background-color: #8000ff;
+    height: 3px;
+    width: 0;
+    left: 0;
+    bottom: -2px;
+    transition: 0.3s;
+}
+
+#download-button a:hover:after {
+    width: 100%;
 }
 
