--- a/src/App.css
+++ b/src/App.css
@@ -1,35 +1,38 @@
 .App {
   text-align: center;
 }
- html {
-   /* 1rem é igual a 10px */
-   font-size: 62.5%;
- }
-
- h1 {
-   font-size: 3.2rem;
- }
-
- h2 {
-  font-size: 2.6rem;
+html {
+  /* 1rem é igual a 10px */
+  font-size: 62.5%;
 }
 
- h3 {
-   font-size: 2.4rem;
- }
+h1 {
+  font-size: 3.2rem;
+}
 
- h4 {
+h2 {
+font-size: 2.8rem;
+}
+
+h3 {
+  font-size: 2.2rem;
+}
+
+h4 {
+font-size: 2rem;
+}
+
+p {
   font-size: 2rem;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
 }
 
- p {
-   font-size: 2rem;
- }
+h1,h2,h3,h4 {
+  margin: 1rem 0rem;
+}
 
- h1,h2,h3,h4 {
-   margin: 1rem 0rem;
- }
- @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 body {
   margin: 0;
