--- a/src/components/AboutMe.css
+++ b/src/components/AboutMe.css
@@ -8,7 +8,7 @@
     list-style-type: none;
     display: inline-block;
     flex-direction: column;
-
+    margin: 0;
     padding: 0;
     border-radius: 10px;
     
