--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  padding: 2% 30%;
 }
 html {
   /* 1rem é igual a 10px */
@@ -35,33 +36,53 @@ h1,h2,h3,h4 {
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+:root {
+  --darkbg: #222222;
+  --lightbg: #f9f9f9;
+  --purplebg: #ECDAFF;
+
+  --darkpurplebg: #F0E1FF;
+  --darkpurple: #A852FF;
+  --lightpurple: #8000FF
+}
+
 body {
   margin: 0;
-  font-family: 'Roboto';
+  padding: 0;
+  font-family: 'Roboto', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #f9f9f9;
-  margin: 2% 30%;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+#light {
+  background-color: var(--lightbg);
 }
 
-html {
-  color: #101010;
+#dark {
+  background-color: var(--darkbg);
+}
+
+.switch {
+  display: flex;
+  height: 5px;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 1em;
+}
+
+#dark .switch {
+  color: white;
 }
 
 @media screen and (min-width: 768px) and (max-width:1023px){
-  body {
+  #light, #dark {
     margin: 1% 5%;
   }
 }
 
 
 @media screen and (max-width:767px){
-  body {
+  #light, #dark {
     margin: 10px 5%;
   }
 
