--- a/src/components/Profile.css
+++ b/src/components/Profile.css
@@ -1,7 +1,11 @@
 #my-picture {
     border-radius: 50%;
     width: 220px;
-    border: solid 5px #8000FF;
+    border: solid 5px var(--lightpurple);
+}
+
+#dark #my-picture {
+    border: solid 5px var(--darkpurple);
 }
 
 .Profile h1 {
@@ -9,7 +13,16 @@
 }
 
 .Profile span {
-    color: #8000FF;
+    color: var(--lightpurple);
+    font-weight: 600;
+}
+
+#dark .Profile {
+    color: white;
+}
+
+#dark .Profile span {
+    color: var(--darkpurple);
     font-weight: 600;
 }
 
